fix: z-index for dyte-avatar

--- a/packages/core/src/components/dyte-participant-tile/dyte-participant-tile.css
+++ b/packages/core/src/components/dyte-participant-tile/dyte-participant-tile.css
@@ -152,6 +152,7 @@ video.mirror {
   dyte-avatar {
     transform: scale(0.6);
     @apply min-w-14;
+    z-index: -1;
   }
 
   :host([size='sm'][variant='solid']) {
@@ -178,6 +179,7 @@ video.mirror {
   dyte-avatar {
     transform: scale(0.6);
     @apply min-w-14;
+    z-index: -1;
   }
 
   :host([size='sm'][variant='solid']) {
@@ -201,6 +203,7 @@ video.mirror {
   ::slotted(dyte-avatar),
   dyte-avatar {
     transform: scale(0.8);
+    z-index: -1;
   }
 }
 
@@ -216,5 +219,6 @@ video.mirror {
   ::slotted(dyte-avatar),
   dyte-avatar {
     transform: scale(0.6);
+    z-index: -1;
   }
 }
